WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146322
Viewport units are wrong when scaled in 2-up mode, cause content to hop around on apple.com/music
https://bugs.webkit.org/show_bug.cgi?id=146322
Summary
Viewport units are wrong when scaled in 2-up mode, cause content to hop aroun...
Tim Horton
Reported
2015-06-25 13:52:38 PDT
Viewport units are wrong when scaled in 2-up mode, cause content to hop around on apple.com/music
Attachments
Patch
(4.16 KB, patch)
2015-06-25 13:53 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-mavericks
(546.27 KB, application/zip)
2015-06-25 14:44 PDT
,
Build Bot
no flags
Details
Patch
(5.64 KB, patch)
2015-06-25 14:59 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-06-25 13:53:05 PDT
Created
attachment 255570
[details]
Patch
Tim Horton
Comment 2
2015-06-25 13:53:25 PDT
<
rdar://problem/21413884
>
Build Bot
Comment 3
2015-06-25 14:43:56 PDT
Comment on
attachment 255570
[details]
Patch
Attachment 255570
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5400530805325824
New failing tests: fast/fixed-layout/fixed-layout.html
Build Bot
Comment 4
2015-06-25 14:44:00 PDT
Created
attachment 255574
[details]
Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Simon Fraser (smfr)
Comment 5
2015-06-25 14:52:58 PDT
Comment on
attachment 255570
[details]
Patch I think we can layout-test this.
Tim Horton
Comment 6
2015-06-25 14:57:34 PDT
(In reply to
comment #5
)
> Comment on
attachment 255570
[details]
> Patch > > I think we can layout-test this.
It actually is already layout tested, I just have to rebaseline the test.
Tim Horton
Comment 7
2015-06-25 14:59:41 PDT
Created
attachment 255576
[details]
Patch
Tim Horton
Comment 8
2015-06-25 15:43:57 PDT
http://trac.webkit.org/changeset/185966
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug